# Verum

./: LICENSE  README.md  arche.py  example.py  example_space.py  index.html  pyproject.toml  verum.py
verum/: __init__.py  core.py  middleware.py
