[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "verum"
version = "0.1.0"
description = "Proof that AI saw what you think it saw."
authors = [
    { name = "Spyros Argyrakos" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai", "security", "cryptography", "audit", "integrity", "ai-agents"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/SpyrosArg/Verum"
Repository = "https://github.com/SpyrosArg/Verum"
