[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "verum"
version = "0.1.4"
description = "Proof that AI saw what you think it saw."
authors = [
    { name = "Spyros Argyrakos" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["ai", "security", "cryptography", "audit", "integrity", "ai-agents", "fastapi", "middleware"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["verum*"]

[tool.setuptools]
py-modules = ["verum"]

[project.optional-dependencies]
fastapi = ["fastapi", "starlette"]

[project.urls]
Homepage = "https://github.com/SpyrosArg/Verum"
Repository = "https://github.com/SpyrosArg/Verum"
